# Projet_optimisation

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: Config.h  FGLPK.h  FileData.h  Solution.h  algo.h  question.h
rendu/: rendu.tex
resources/: binpack1d_00_exp.txt
src/: Config.cpp  FGLPK.cpp  FileData.cpp  Solution.cpp  algo.cpp  main.cpp  question1.cpp  question2.cpp  question3.cpp  question4.cpp  question5.cpp  question6.cpp  question7.cpp  test.cpp
